[package]
name = "rusty-ircd"
version = "0.2.3"
authors = ["Joanna Janet Zaitseva-Doyle <jjadoyle@gmail.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = [ "full" ] }
dns-lookup = "1.0"
log = "0.4.11"
env_logger = "0.7.1"
